[project]
name = "finalproject-parshin-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel",email = "elderlyracoon1337@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
project = "valutatrade_hub.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)"
]